--- a/.gitconfig
+++ b/.gitconfig
@@ -1,48 +1,53 @@
 [core]
-	excludesfile = ~/.gitignore
-	autocrlf = input
-	editor = vim
+  excludesfile = ~/.gitignore
+  autocrlf = input
+  editor = vim --noplugin
 [user]
-	name = Pablo Fonseca
-	email = pablofonseca777@gmail.com
+  name = Pablo Fonseca
+  email = pablofonseca777@gmail.com
 [branch]
-	autosetuprebase = always
+  autosetupmerge = true
+  autosetuprebase = always
 [branch "master"]
-	rebase = true
+  rebase = true
 [push]
-	default = current
+  default = current
 [pull]
-	default = current
-	rebase = true
+  default = current
+  rebase = true
 [color]
-	ui = true
-	diff = auto
-	branch = auto
-	interactive = auto
+  ui = true
+  diff = auto
+  branch = auto
+  interactive = auto
 [color "status"]
-	added = green
-	changed = yellow
-	untracked = cyan
-	deleted = red
+  added = green
+  changed = yellow
+  untracked = cyan
+  deleted = red
 [alias]
-	co = checkout
-	st = status -s
-	lg = log --oneline --decorate --all --graph
-	cm = commit
-	co-pr = !sh -c 'git fetch origin pull/$1/head:pr/$1 && git checkout pr/$1' -
+  co = checkout
+  st = status -s
+  lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
+  cm = commit
+  co-pr = !sh -c 'git fetch origin pull/$1/head:pr/$1 && git checkout pr/$1' -
+  cleanup = !git remote prune origin && git gc && git clean -df && git stash clear
 [diff]
-	mnemonicprefix = true
-	algorithm = patience
+  mnemonicprefix = true
+  algorithm = patience
 [merge]
-	tool = vim
+  ff = only
+  tool = vim
 [fetch]
-	prune = true
+  prune = true
 [github]
-	user = pablobfonseca
+  user = pablobfonseca
 [mergetool "vim"]
-	cmd = vim -w $MERGED
-	trustExitCode = false
+  cmd = vim -w $MERGED
+  trustExitCode = false
 [credential]
-	helper = osxkeychain
+  helper = osxkeychain
 [rerere]
-	enabled = true
+  enabled = true
+[help]
+  autocorrect = 1
