--- a/git/config
+++ b/git/config
@@ -89,7 +89,7 @@
   unstage                 = reset
   upstream                = rev-parse --abbrev-ref --symbolic-full-name @{u}
   ureset                  = !git upstream && git reset --hard $(git upstream)
-  fo                      = fetch origin
+  fop                     = !git fetch origin && git pl
 [diff "ruby"]
   funcname                = "^ *\\(\\(def\\) .*\\)"
 [diff]
