Bind HJKL to resize pane

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -29,14 +29,10 @@ set -g prefix C-a
 bind a send-prefix
 
 # Resize panes shortcuts
-unbind Right
-bind Right resize-pane -R 8
-unbind Left
-bind Left H resize-pane -L 8
-unbind Up
-bind Up resize-pane -U
-unbind Down
-bind Down J resize-pane -D
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
 
 # reload config file
 bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
