--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,6 +34,12 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
+# Opens mutt in a new window
+bind m new-window "reattach-to-user-namespace mutt"
+
+# Opens dotifiles folder in a new tmux pane
+bind D split-window -h -c ~/dotfiles "reattach-to-user-namespace vim +CtrlP"
+
 # reload config file
 bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
 
