Add solarized theme tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -118,6 +118,7 @@ bind Down last-window \; swap-pane -s fullscreen.1 \; kill-window -t fullscreen
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm' # Tmux package manager
 set -g @plugin 'tmux-plugins/tmux-battery' #Show battery icon/status
+# set -g @plugin 'seebi/tmux-colors-solarized'
 
 # How to install other plugins from Github:
 # To install new plugins press: prefix + I
@@ -127,5 +128,6 @@ set -g @plugin 'tmux-plugins/tmux-battery' #Show battery icon/status
 
 # ====== Color & Style Settingd ======
 source ~/.tmux/theme.sh
+# set -g @colors-solarized 'light'
 
 run-shell '~/.tmux/plugins/tpm/tpm'
