--- a/git/config
+++ b/git/config
@@ -6,6 +6,7 @@
   editor                  = vim -v
   excludesfile            = ~/.global_ignore
   pager                   = less -F -X
+  whitespace              = warn
 [github]
   user                    = pablobfonseca
 [help]
@@ -105,6 +106,9 @@
   mnemonicprefix          = true
   algorithm               = patience
   tool                    = vimdiff
+[merge "bundle"]
+  name                    = bundle
+  driver                  = bundle
 [merge]
   tool                    = fugitive
 [mergetool "fugitive"]
