--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -118,6 +118,7 @@ bind Down last-window \; swap-pane -s fullscreen.1 \; kill-window -t fullscreen
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm' # Tmux package manager
 set -g @plugin 'tmux-plugins/tmux-battery' #Show battery icon/status
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'seebi/tmux-colors-solarized'
 
 # How to install other plugins from Github:
