--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,11 +34,8 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-# Opens mutt in a new window
-bind m new-window "reattach-to-user-namespace mutt"
-
-# Opens dotifiles folder in a new tmux pane
-bind D split-window -h -c ~/dotfiles "reattach-to-user-namespace vim +CtrlP"
+# Opens dotfiles folder in a new tmux pane
+bind D split-window -h -c ~/.dotfiles "reattach-to-user-namespace vim +FzfFiles"
 
 # reload config file
 bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
@@ -56,12 +53,14 @@ bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'V' send -X select-line
+bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
-unbind -t vi-copy Space
-bind -t vi-copy Space jump-again
-bind-key -t vi-copy 0 back-to-indentation
+unbind -T copy-mode-vi Space
+bind -T copy-mode-vi Space jump-again
+bind-key -T copy-mode-vi 0 back-to-indentation
 
 bind y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
 bind C-y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
