--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,6 +37,9 @@ bind -r L resize-pane -R 5
 # Opens dotfiles folder in a new tmux pane
 bind D split-window -h -c ~/.dotfiles "reattach-to-user-namespace vim +FzfFiles"
 
+# open lazygit
+bind g split-window -h -c "#{pane_current_path}" "lazygit"
+
 # reload config file
 bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
 
@@ -70,7 +73,7 @@ bind C-l send-keys 'C-l'
 bind C-k swap-pane -U
 
 # increase scroll-back history
-set -g history-limit 10000
+set -g history-limit 999999999
 
 # automatically renumber tmux windows
 set -g renumber-windows on
