--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,7 +38,7 @@ bind -r L resize-pane -R 5
 bind D split-window -h -c ~/.dotfiles "reattach-to-user-namespace vim +FzfFiles"
 
 # open lazygit
-bind g split-window -h -c "#{pane_current_path}" "lazygit"
+bind g split-window -v -c "#{pane_current_path}" "lazygit"
 
 # reload config file
 bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
