--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,6 +5,7 @@
 set-option -g default-shell $SHELL
 # tmux display things in 256 colors
 set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color*:Tc"
 
 # copy and paster
 set-option -g default-command "reattach-to-user-namespace -l zsh"
