--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,7 +8,7 @@ set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",xterm-256color*:Tc"
 
 # copy and paster
-set-option -g default-command "reattach-to-user-namespace -l fish"
+set-option -g default-command "reattach-to-user-namespace -l bash"
 
 set -g clock-mode-style 12
 
@@ -115,6 +115,9 @@ unbind Up
 bind Up new-window -d -n fullscreen \; swap-pane -s fullscreen.1 \; select-window -t fullscreen
 unbind Down
 bind Down last-window \; swap-pane -s fullscreen.1 \; kill-window -t fullscreen
+
+set -g default-command /usr/local/bin/fish
+set -g default-shell /usr/local/bin/fish
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm' # Tmux package manager
