adds efm-langserver

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -16,6 +16,11 @@
       "command": "gopls",
       "rootPatterns": ["go.mod"],
       "filetypes": ["go"]
+    },
+    "efm": {
+      "command": "efm-langserver",
+      "args": [],
+      "filetypes": ["vim", "eruby", "markdown"]
     }
   }
 }
