--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -1,5 +1,6 @@
 {
   "suggest.echodocSupport": true,
+  "suggest.noselect": false,
   "suggest.maxCompleteItemCount": 20,
   "tsserver.enableJavascript": true,
   "coc.preferences.formatOnSaveFiletypes": ["rust"],
