--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -121,7 +121,7 @@ set -g default-shell /usr/local/bin/fish
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm' # Tmux package manager
-set -g @plugin 'tmux-plugins/tmux-battery' #Show battery icon/status
+set -g @plugin 'tmux-plugins/tmux-battery' # Show battery icon/status
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'seebi/tmux-colors-solarized'
 
@@ -135,4 +135,4 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 source ~/.tmux/theme.sh
 # set -g @colors-solarized 'light'
 
-run-shell '~/.tmux/plugins/tpm/tpm'
+run -b '~/.tmux/plugins/tpm/tpm'
