--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -121,8 +121,9 @@ set -g default-shell /usr/local/bin/fish
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm' # Tmux package manager
-set -g @plugin 'tmux-plugins/tmux-battery' # Show battery icon/status
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-online-status'
+
 # set -g @plugin 'seebi/tmux-colors-solarized'
 
 # How to install other plugins from Github:
