--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -123,6 +123,8 @@ set -g default-shell /usr/local/bin/fish
 set -g @plugin 'tmux-plugins/tpm' # Tmux package manager
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-online-status'
+set -g @plugin 'xamut/tmux-spotify'
+set -g @plugin 'robhurring/tmux-spotify'
 
 # set -g @plugin 'seebi/tmux-colors-solarized'
 
