--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,7 +4,7 @@
 
 set-option -g default-shell $SHELL
 # tmux display things in 256 colors
-set -g default-terminal "screen-256color"
+set -g default-terminal $TERM
 set -ga terminal-overrides ",xterm-256color*:Tc"
 
 # copy and paster
@@ -123,6 +123,8 @@ set -g default-shell /usr/local/bin/fish
 set -g @plugin 'tmux-plugins/tpm' # Tmux package manager
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-online-status'
+
+set-option -g focus-events on
 
 # set -g @plugin 'seebi/tmux-colors-solarized'
 
