--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -47,15 +47,6 @@ bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
 # Use emacs/readline key-bindings at the tmux command prompt `<prefix>:`
 set -g status-keys emacs
 
-# Smart pane switching with awareness of vim splits
-# See: https://github.com/christoomey/vim-tmux-navigator
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n 'C-\' if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-
 # Setup 'v' to begin selection as in Vim
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'V' send -X select-line
@@ -123,6 +114,7 @@ set -g default-shell /usr/local/bin/fish
 set -g @plugin 'tmux-plugins/tpm' # Tmux package manager
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-online-status'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set-option -g focus-events on
 
