ale + prettier changes

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -12,6 +12,7 @@
   "solargraph.useBundler": true,
   "codeLens.enable": true,
   "eslint.autoFixOnSave": true,
+  "diagnostic.displayByAle": true,
   "eslint.filetypes": ["javascript", "typescript", "jsx", "tsx"],
   "prettier.useEditorConfig": true,
   "python.venvFolders": [".virtualenvs"],
