fix(tmux): few tweaks for tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -32,8 +32,6 @@ bind -r L resize-pane -R 5
 # swap pane
 bind C-k swap-pane -U
 bind C-j swap-pane -D
-bind C-h swap-pane -L
-bind C-l swap-pane -R
 
 # split panes
 bind | split-window -h -c "#{pane_current_path}"
@@ -52,7 +50,19 @@ bind r source-file ~/.config/tmux/tmux.conf \; display "Config reloaded!"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @plugin 'dracula/tmux'
+
+# Theme options
+set -g @dracula-show-powerline true
+set -g @dracula-show-left-sep ""
+set -g @dracula-show-right-sep ""
+set -g @dracula-plugins "git"
+set -g @dracula-show-flags true
+
+set -g @dracula-left-icon-padding 0
+
+set -g @dracula-show-fahrenheit false
+set -g @dracula-show-location false
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
