fix(tmux): theme tweaks

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -36,6 +36,11 @@ bind C-j swap-pane -D
 # split panes
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
+unbind '"'
+unbind %
+
+# Secondary binding for C-l to retain redraw
+bind C-l send-keys 'C-l'
 
 # Setup 'v' to begin selection as in Vim
 bind-key -T copy-mode-vi 'v' send -X begin-selection
@@ -56,13 +61,12 @@ set -g @plugin 'dracula/tmux'
 set -g @dracula-show-powerline true
 set -g @dracula-show-left-sep ""
 set -g @dracula-show-right-sep ""
-set -g @dracula-plugins "git"
+set -g @dracula-plugins "weather"
 set -g @dracula-show-flags true
-
 set -g @dracula-left-icon-padding 0
-
 set -g @dracula-show-fahrenheit false
-set -g @dracula-show-location false
+
+set -g status-position top
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
