--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -49,6 +49,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dracula/tmux'
+set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 
 # Theme options
 set -g @dracula-show-powerline true
