feat(zsh,tmux): add cht.sh command for tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -41,6 +41,8 @@ bind-key -T copy-mode-vi 'V' send -X select-line
 bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
+bind-key -r S run-shell "tmux neww tmux-cht.sh"
+
 # reload config file
 bind r source-file ~/.config/tmux/tmux.conf \; display "Config reloaded!"
 
