fix(tmux): few tweaks and add tmux-sessionizer

--- a/tmux/tmux-nerd-font-window-name.yml
+++ b/tmux/tmux-nerd-font-window-name.yml
@@ -8,3 +8,4 @@ icons:
   zsh: "" # overwrite with your own symbol (Nerd Font icon, emoji, whatever!)
   cmatrix: "🤯" # add new entries that aren't included
   nvim: ""
+  watch: "󱥼"
