--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -65,4 +65,4 @@ set -g @dracula-show-fahrenheit false
 set -g status-position top
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
