--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -55,6 +55,7 @@ set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 
 # Theme options
 set -g @dracula-show-powerline true
+set -g @dracula-show-left-icon session
 set -g @dracula-show-left-sep ""
 set -g @dracula-show-right-sep ""
 set -g @dracula-plugins "weather"
