--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -43,6 +43,9 @@ bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-name
 
 bind-key -r S run-shell "tmux neww tmux-cht"
 
+# open notes
+bind-key -r N run-shell "tmux neww open_note"
+
 # reload config file
 bind r source-file ~/.config/tmux/tmux.conf \; display "Config reloaded!"
 
