feat(tmux): adds sessionx plugin

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -55,7 +55,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dracula/tmux'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
-set -g @plugin 'thuantanphamfilms/tmux-fzf-session-switch'
+set -g @plugin 'omerxx/tmux-sessionx' # prefix + O to open the switcher
 
 # Theme options
 set -g @dracula-show-powerline true
