fix(tmux): add keybind for sessionx

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -69,5 +69,8 @@ set -g @dracula-show-fahrenheit false
 
 set -g status-position top
 
+# open sessionx
+set -g @sessionx-bind 's'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
