fix(nvim,tmux): few changes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -46,6 +46,9 @@ bind-key -r S run-shell "tmux neww tmux-cht"
 # open notes
 bind-key -r N run-shell "tmux neww open_note"
 
+# open file in nvim
+bind-key -r C-f run-shell "tmux neww 'zsh -i -c open_file'"
+
 # reload config file
 bind r source-file ~/.config/tmux/tmux.conf \; display "Config reloaded!"
 
