--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -56,24 +56,23 @@ bind r source-file ~/.config/tmux/tmux.conf \; display "Config reloaded!"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-# set -g @plugin 'dracula/tmux'
+set -g @plugin 'dracula/tmux'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
-set -g @plugin 'omerxx/tmux-sessionx' # prefix + O to open the switcher
-
-set -g @plugin 'egel/tmux-gruvbox'
-set -g @tmux-gruvbox 'dark' # or 
+set -g @plugin 'omerxx/tmux-sessionx'
+set -ga update-environment EDITOR
+set -g @plugin 'artemave/tmux_super_fingers' # prefix + f
 
 # Theme options
-# set -g @dracula-show-powerline true
-# set -g @dracula-show-left-icon session
-# set -g @dracula-show-left-sep ""
-# set -g @dracula-show-right-sep ""
-# set -g @dracula-plugins "weather"
-# set -g @dracula-show-flags true
-# set -g @dracula-left-icon-padding 0
-# set -g @dracula-show-fahrenheit false
-#
-# set -g status-position top
+set -g @dracula-show-powerline true
+set -g @dracula-show-left-icon session
+set -g @dracula-show-left-sep ""
+set -g @dracula-show-right-sep ""
+set -g @dracula-plugins "weather"
+set -g @dracula-show-flags true
+set -g @dracula-left-icon-padding 0
+set -g @dracula-show-fahrenheit false
+
+set -g status-position top
 
 # open sessionx
 set -g @sessionx-bind 's'
