--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -68,6 +68,7 @@ set -g @dracula-show-left-icon session
 set -g @dracula-show-left-sep ""
 set -g @dracula-show-right-sep ""
 set -g @dracula-plugins "weather"
+set -g @dracula-fixed-location "London, UK"
 set -g @dracula-show-flags true
 set -g @dracula-left-icon-padding 0
 set -g @dracula-show-fahrenheit false
