feat(tmux): add tmux-jump and remove tmux_super_fingers

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -60,7 +60,8 @@ set -g @plugin 'dracula/tmux'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'omerxx/tmux-sessionx'
 set -ga update-environment EDITOR
-set -g @plugin 'artemave/tmux_super_fingers' # prefix + f
+set -g @plugin 'schasse/tmux-jump' # prefix + f
+set -g @jump-key 'f'
 
 # Theme options
 set -g @dracula-show-powerline true
