--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -46,6 +46,9 @@ bind-key -r S run-shell "tmux neww tmux-cht"
 # open notes
 bind-key -r N run-shell "tmux neww open_note"
 
+# open lazygit
+bind-key -r C-g run-shell "tmux popup -d \"#{pane_current_path}\" -xC -yC -w80% -h80% -E lazygit"
+
 # open file in nvim
 bind-key -r C-f run-shell "tmux neww 'zsh -i -c open_file'"
 
