feat(tmux): open a scratch terminal in a popup

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -52,8 +52,12 @@ bind-key -r C-g run-shell "tmux popup -d \"#{pane_current_path}\" -xC -yC -w80% 
 # open file in nvim
 bind-key -r C-f run-shell "tmux neww 'zsh -i -c open_file'"
 
+# open a scratch terminal
+bind-key -r M-g display-popup -E "tmux new-session -A -s scratch"
+
 # reload config file
 bind r source-file ~/.config/tmux/tmux.conf \; display "Config reloaded!"
+
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
