feat(tmux): add tmux-floax plugin

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -66,6 +66,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dracula/tmux'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'omerxx/tmux-sessionx'
+set -g @plugin 'omerxx/tmux-floax'
 set -ga update-environment EDITOR
 set -g @plugin 'schasse/tmux-jump' # prefix + f
 set -g @jump-key 'f'
