--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,6 +16,8 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
+set-option -sa terminal-overrides ",xterm*:Tc"
+
 # resize panes
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
