--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -105,7 +105,7 @@ cmd-ctrl-j = 'move down'
 cmd-ctrl-k = 'move up'
 cmd-ctrl-l = 'move right'
 
-alt-f = 'fullscreen'
+# alt-f = 'fullscreen'
 ctrl-cmd-o = 'fullscreen'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#resize
@@ -123,14 +123,10 @@ alt-7 = 'workspace 7'
 alt-8 = 'workspace 8'
 alt-9 = 'workspace 9'
 alt-a = 'workspace A' # In your config, you can drop workspace bindings that you don't need
-alt-b = 'workspace B'
-alt-c = 'workspace C'
 alt-d = 'workspace D'
-alt-e = 'workspace E'
 alt-g = 'workspace G'
 alt-i = 'workspace I'
 alt-m = 'workspace M'
-alt-n = 'workspace N'
 alt-o = 'workspace O'
 alt-p = 'workspace P'
 alt-q = 'workspace Q'
