--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -84,7 +84,7 @@ outer.right =      5
 # alt-enter = 'exec-and-forget open -n /Applications/WezTerm.app'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
-alt-slash = 'layout tiles horizontal vertical'
+cmd-shift-slash = 'layout tiles horizontal vertical'
 alt-comma = 'layout accordion horizontal vertical'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#focus
