--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -81,7 +81,9 @@ outer.right =      5
 
 # You can uncomment this line to open up terminal with alt + enter shortcut
 # See: https://nikitabobko.github.io/AeroSpace/commands#exec-and-forget
-# alt-enter = 'exec-and-forget open -n /Applications/WezTerm.app'
+ctrl-cmd-b = 'exec-and-forget open -a Arc'
+ctrl-cmd-t = 'exec-and-forget open -a WezTerm'
+ctrl-cmd-s = 'exec-and-forget open -a Slack'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
 cmd-shift-slash = 'layout tiles horizontal vertical'
