--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -91,10 +91,10 @@ cmd-shift-slash = 'layout tiles horizontal vertical'
 alt-comma = 'layout accordion horizontal vertical'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#focus
-alt-h = 'focus left'
-# alt-j = 'focus down'
-# alt-k = 'focus up'
-alt-l = 'focus right'
+alt-shift-h = 'focus left'
+alt-shift-j = 'focus down'
+alt-shift-k = 'focus up'
+alt-shift-l = 'focus right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move
 # alt-shift-h = 'move left'
