feat(tmux,zsh): add tmuxinator

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -88,6 +88,8 @@ set -g status-position top
 
 # open sessionx
 set -g @sessionx-bind 's'
+set -g @sessionx-fzf-builtin-tmux 'on'
+set -g @sessionx-tmuxinator-mode 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
