fix(tmux): add description to keybindings

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -43,22 +43,22 @@ bind-key -T copy-mode-vi 'V' send -X select-line
 bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
-bind-key -r S run-shell "tmux neww tmux-cht"
+bind-key -N "Open cheatsheet" -r S run-shell "tmux neww tmux-cht"
 
 # open notes
-bind-key -r N run-shell "tmux neww open_note"
+bind-key -N "Open notes" -r N run-shell "tmux neww open_note"
 
 # open lazygit
-bind-key -r C-g run-shell "tmux popup -d \"#{pane_current_path}\" -xC -yC -w80% -h80% -E lazygit"
+bind-key -N "Open Lazygit" -r C-g run-shell "tmux popup -d \"#{pane_current_path}\" -xC -yC -w80% -h80% -E lazygit"
 
 # open file in nvim
-bind-key -r C-f run-shell "tmux neww 'zsh -i -c open_file'"
+bind-key -N "Open file in nvim" -r C-f run-shell "tmux neww 'zsh -i -c open_file'"
 
 # open a scratch terminal
-bind-key -r M-g display-popup -E "tmux new-session -A -s scratch"
+bind-key -N "Start a scratch terminal session" -r M-g display-popup -E "tmux new-session -A -s scratch"
 
 # reload config file
-bind r source-file ~/.config/tmux/tmux.conf \; display "Config reloaded!"
+bind-key -N "Reload the config file" r source-file ~/.config/tmux/tmux.conf \; display "Config reloaded!"
 
 
 # List of plugins
