--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -85,6 +85,7 @@ ctrl-cmd-b = 'exec-and-forget open -a Arc'
 ctrl-cmd-t = 'exec-and-forget open -a WezTerm'
 ctrl-cmd-s = 'exec-and-forget open -a Slack'
 ctrl-cmd-n = 'exec-and-forget open -a Obsidian'
+ctrl-cmd-e = 'exec-and-forget open -a Emacs'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
 cmd-shift-slash = 'layout tiles horizontal vertical'
