--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -43,6 +43,8 @@ bind-key -T copy-mode-vi 'V' send -X select-line
 bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
+bind -n M-b popup -d '#{pane_current_path}' -E -h 95% -w 95% -x 100% "bpytop"
+
 bind-key -N "Open cheatsheet" -r S run-shell "tmux neww tmux-cht"
 
 # open notes
