fix(brew): add packages to Brewfile

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -42,3 +42,14 @@ alacritty
 navi
 tmuxinator
 bpytop
+yazi
+ffmpegthumbnailer
+sevenzip
+jq
+poppler
+fd
+ripgrep
+fzf
+zoxide
+imagemagick
+font-symbols-only-nerd-font
